# GameSpyEmulator

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MasterServer.ini  README.MD  appveyor.yml
bulid_win32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GameSpyEmulator.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
bulid_win32/MasterServer/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  MasterServer.sln  MasterServer.vcxproj  MasterServer.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
bulid_win32/ModuleDevelopmentKit/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  MDK.vcxproj  MDK.vcxproj.filters  ModuleDevelopmentKit.sln  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
bulid_win32/ModuleDevelopmentKit/libuv/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  libuv.sln  uv.vcxproj  uv_a.vcxproj  uv_a.vcxproj.filters
bulid_win32/ModuleDevelopmentKit/mariadb-connector-c/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  auth_gssapi_client.vcxproj  cmake_install.cmake  (+12 more)
bulid_win32/RetroSpyServer/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RetroSpyServer.sln  cmake_install.cmake
(+71 files in other folders)
